NBNP-79 Update storage paths for content files

--- a/config-yml/field.field.node.publication.field_sample_image.yml
+++ b/config-yml/field.field.node.publication.field_sample_image.yml
@@ -18,7 +18,7 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_directory: publication-images
+  file_directory: serials/publications/thumbnails
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
   max_resolution: ''
