--- a/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   module:
     - search_api_solr
-    - search_api
     - digital_serial_page
+    - search_api
   config:
     - search_api.server.newspapers_lib_unb_ca
 third_party_settings:
@@ -23,6 +23,17 @@ field_settings:
     datasource_id: 'entity:digital_serial_page'
     property_path: page_ocr
     type: solr_text_ngram
+    dependencies:
+      module:
+        - digital_serial_page
+  page_sort:
+    label: 'Page Sort'
+    datasource_id: 'entity:digital_serial_page'
+    property_path: page_sort
+    type: string
+    dependencies:
+      module:
+        - digital_serial_page
   parent_digital_issue_id:
     label: 'Parent Issue ID'
     property_path: parent_digital_issue_id
