--- a/config-yml/facets.facet.city_town.yml
+++ b/config-yml/facets.facet.city_town.yml
@@ -31,6 +31,12 @@ hard_limit: 0
 exclude: false
 only_visible_when_facet_source_is_visible: true
 processor_configs:
+  active_widget_order:
+    processor_id: active_widget_order
+    weights:
+      sort: 20
+    settings:
+      sort: ASC
   count_widget_order:
     processor_id: count_widget_order
     weights:
