--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1876,6 +1876,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              newspaper_administrator: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -1889,7 +1890,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          parse_mode: terms
+          parse_mode: direct
           min_length: null
           fields: {  }
           plugin_id: search_api_fulltext
