--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -565,6 +565,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              newspaper_administrator: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -578,7 +579,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          parse_mode: terms
+          parse_mode: direct
           min_length: 3
           fields: {  }
           plugin_id: search_api_fulltext
