NBNP-40 Title 'location term' partial matching (improves autocomplete)

--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -42,7 +42,7 @@ field_settings:
     label: 'Place of Publication » The full name of the country subdivision (i.e. province).'
     datasource_id: 'entity:node'
     property_path: 'field_place_of_publication:administrative_area_name'
-    type: text
+    type: solr_text_ngram
     dependencies:
       config:
         - field.storage.node.field_place_of_publication
@@ -58,7 +58,7 @@ field_settings:
     label: 'Place of Publication » The full name of the country.'
     datasource_id: 'entity:node'
     property_path: 'field_place_of_publication:country_name'
-    type: text
+    type: solr_text_ngram
     dependencies:
       config:
         - field.storage.node.field_place_of_publication
@@ -210,7 +210,7 @@ field_settings:
     label: 'Place of Publication » The locality (i.e. city).'
     datasource_id: 'entity:node'
     property_path: 'field_place_of_publication:locality'
-    type: text
+    type: solr_text_ngram
     dependencies:
       config:
         - field.storage.node.field_place_of_publication
@@ -273,7 +273,7 @@ field_settings:
     label: Title
     datasource_id: 'entity:node'
     property_path: title
-    type: text
+    type: solr_text_ngram
     boost: !!float 8
     dependencies:
       module:
