--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -41,7 +41,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: 'Apply filters'
+          submit_button: 'Apply Filter'
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -186,7 +186,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_label
           settings:
-            link: true
+            link: false
           group_column: target_id
           group_columns: {  }
           group_rows: true
@@ -200,6 +200,72 @@ display:
           entity_type: digital_serial_title
           entity_field: parent_title
           plugin_id: field
+        id:
+          id: id
+          table: digital_serial_title
+          field: id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Digital Title ID'
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_integer
+          settings:
+            thousand_separator: ''
+            prefix_suffix: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: digital_serial_title
+          entity_field: id
+          plugin_id: field
         field_sort_title:
           id: field_sort_title
           table: node__field_sort_title
@@ -212,8 +278,8 @@ display:
           alter:
             alter_text: true
             text: '{{ parent_title }}'
-            make_link: false
-            path: ''
+            make_link: true
+            path: '/serials/{{ id }}'
             absolute: false
             external: false
             replace_spaces: false
@@ -325,82 +391,18 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_place_of_publication:
-          id: field_place_of_publication
+        field_place_of_publication_locality:
+          id: field_place_of_publication_locality
           table: node__field_place_of_publication
-          field: field_place_of_publication
+          field: field_place_of_publication_locality
           relationship: parent_title
           group_type: group
           admin_label: ''
           label: 'Place of Publication'
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: '<small class="text-muted"><i class="glyphicon glyphicon-question-sign"></i> Unknown</small>'
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: datetime_default
-          settings:
-            timezone_override: ''
-            format_type: html_date
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_last_issue_sort_date:
-          id: field_last_issue_sort_date
-          table: node__field_last_issue_sort_date
-          field: field_last_issue_sort_date
-          relationship: parent_title
-          group_type: group
-          admin_label: ''
-          label: 'Last Issue Date'
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{ field_place_of_publication }}'
             make_link: false
             path: ''
             absolute: false
@@ -453,8 +455,8 @@ display:
           exposed: true
           expose:
             operator_id: title_op
-            label: 'Filter by 1 or more title terms '
-            description: ''
+            label: Title
+            description: 'Enter 1 or more title terms'
             use_operator: false
             operator: title_op
             identifier: title
@@ -483,7 +485,7 @@ display:
           entity_field: title
           plugin_id: string
       sorts: {  }
-      title: 'Digital Title Listing'
+      title: 'Digitally Available Titles'
       header:
         result:
           id: result
@@ -525,6 +527,7 @@ display:
       arguments: {  }
       display_extenders: {  }
       css_class: search-results
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
