--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -538,9 +538,9 @@ display:
       tags:
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
-  page_digital_listing:
+  page_listing:
     display_plugin: page
-    id: page_digital_listing
+    id: page_listing
     display_title: 'Digital titles'
     position: 1
     display_options:
