Show favicon for admin forms

--- a/config-yml/system.theme.global.yml
+++ b/config-yml/system.theme.global.yml
@@ -1,8 +1,8 @@
 favicon:
   mimetype: image/vnd.microsoft.icon
-  path: ''
+  path: themes/custom/newspapers_lib_unb_ca/src/img/favicon.ico
   url: ''
-  use_default: true
+  use_default: false
 features:
   comment_user_picture: true
   comment_user_verification: true
