--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.storage.node.field_additional_indexed_text
     - field.storage.node.field_description
     - field.storage.node.field_place_of_publication
+    - field.storage.node.field_language
     - field.storage.node.field_family
     - field.storage.node.field_first_issue_date
     - field.storage.node.field_first_issue_search_date
@@ -142,6 +143,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_issn
+  field_language:
+    label: 'Facet »Language'
+    datasource_id: 'entity:node'
+    property_path: field_language
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_language
   field_last_issue_approx_date:
     label: 'Verbatim date'
     datasource_id: 'entity:node'
