--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -663,7 +663,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          parse_mode: direct
+          parse_mode: terms
           min_length: 3
           fields: {  }
           plugin_id: search_api_fulltext
