--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -51,6 +51,7 @@ module:
   search_api_autocomplete: 0
   search_api_db: 0
   search_api_solr: 0
+  serial_holding_export: 0
   serialization: 0
   serials: 0
   system: 0
