NBNP-177 Change holding type "Physical" to "Print"

--- a/custom/modules/serials/modules/serial_holding_export/config/install/serial_holding_export.export.yml
+++ b/custom/modules/serials/modules/serial_holding_export/config/install/serial_holding_export.export.yml
@@ -2,7 +2,7 @@ langcode: en
 mode: default
 status: true
 holding_types:
-  Physical:
+  Print:
     action: overlay
     collection_name: UNB Libraries Newspapers Database (Online)
     collection_id: customer.133054.unbnewsdb
